# jet_garden_service

./: .env  .gitignore  CHANGELOG.md  LICENSE  Taskfile.yaml  cliff.toml  docker-compose.yaml
.github/workflows/: changelog.yaml
services/core/: Dockerfile  pyproject.toml  requirements.txt
services/core/proto/: core.proto
services/core/src/: core.py  main.py
services/faiss/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
services/faiss/proto/: faiss.proto
services/faiss/src/: db.py  faiss_service.py  main.py
web/: pyproject.toml
