[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "munch>=4.0.0",
    "protobuf>=6.33.5",
    "pyyaml>=6.0.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
